...
          />
        </Pressable>
        <View style={styles.copy}>
          <Text
            numberOfLines={1}
            accessibilityRole="header"
            testID="overview-title"
            style={[typography.title, { color: theme.contentPrimary }]}
          >
            {title}
          </Text>
          {caption ? (
            <Text
...
